styles/pwa.less
html {
    overflow: visible;
    position: relative;

    /* prevent iOS from showing callouts like when long pressing an image */
    -webkit-touch-callout: none;

    /* Prevent font scaling in landscape while allowing user zoom */
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;

    /* make things more "app" like: disable text selection */
    // -webkit-user-select: none;

    --view-gutter: 2em;

    --safe-bottom: env(safe-area-inset-bottom);
    --safe-top: env(safe-area-inset-top);
    --safe-left: env(safe-area-inset-left);
    --safe-right: env(safe-area-inset-right);

    --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
               Roboto, Oxygen-Sans, Ubuntu, Cantarell,
               "Helvetica Neue", sans-serif;
}

html.ios.installed {
    // top: env(safe-area-inset-top);
    top: calc(env(safe-area-inset-top) / 1.25);
    height: calc( 100% + (env(safe-area-inset-top) / 4));
}

html, body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

@media (min-width:700px) and (min-height:700px) {
    html.mobile body {
        // little larger on tablets
        font-size: 18px;
    }
}

// slightly larger menu on small screens
@media screen and (max-width:699px), screen and (max-height:699px) {

    :root.mobile html {
        --view-gutter: 1em;
    }
    
    :root.mobile .popover .b-menu {
        font-size: 1.1em;
    }

    :root.mobile b-panels[name="root"] {
        top: 0;
        z-index: 110;
    }
}

// change Menu presenter styling when rendered within a Panel (or modal)
b-panel {
    --b-menu-input-radius: 4px;
    --b-menu-input-font-size: 1em;
    --b-menu-input-padding: .5em;
}

:root:not(.mobile) b-panel[type="search-popup"] {
    --radius: 1em;
    position: fixed;
    z-index: 2000 !important;
    top: 0;
}

